# SDiZO2

./: CMakeLists.txt  main.cpp
graphs/: graph.cpp  graph.h  list.cpp  list.h  matrix.cpp  matrix.h
graphs/util/: edge.h  test.cpp  test.h
structures/: heap.cpp  heap.h  list.cpp  list.h  listElement.h
